--- a/httpServer/ui/scss/components/_index.scss
+++ b/httpServer/ui/scss/components/_index.scss
@@ -7,6 +7,7 @@
 @import 'table';
 @import 'option-toggle';
 @import 'btn';
+@import 'settings';
 
 @import 'main-sidebar';
 @import 'alarm-overview';
