--- a/httpServer/ui/scss/components/pages/_dashboard.scss
+++ b/httpServer/ui/scss/components/pages/_dashboard.scss
@@ -116,6 +116,7 @@ $b: 'page-dashboard';
                 &__settings {
                     width: 14rem;
                     flex-grow: 0;
+                    margin-top: -1rem;
 
                     .save-button {
                         color: white;
