current values in separate component

--- a/httpServer/ui/scss/components/_single-value-display.scss
+++ b/httpServer/ui/scss/components/_single-value-display.scss
@@ -16,6 +16,7 @@ $b: 'single-value-display';
 
     &__value {
         font-size: 4.5rem;
+        line-height: 4.5rem;
         cursor: pointer;
     }
 
