calibrate steps GUI

--- a/httpServer/ui/scss/components/_current-values.scss
+++ b/httpServer/ui/scss/components/_current-values.scss
@@ -49,3 +49,9 @@ $b: 'current-values';
         width: 600px;
     }
 }
+
+.calibration-dialog {
+    .MuiDialog-paper {
+        width: 600px;
+    }
+}
