replace buttons on dialogs

--- a/httpServer/ui/scss/components/pages/_dashboard.scss
+++ b/httpServer/ui/scss/components/pages/_dashboard.scss
@@ -161,3 +161,10 @@ $b: 'page-dashboard';
         text-align: center;
     }
 }
+
+.MuiDialog-container {
+    .threed-btn {
+        padding: 1rem;
+        margin:1rem;
+    }
+}
