--- a/httpServer/ui/scss/components/pages/_dashboard.scss
+++ b/httpServer/ui/scss/components/pages/_dashboard.scss
@@ -167,4 +167,9 @@ $b: 'page-dashboard';
         padding: 1rem;
         margin:1rem;
     }
+
+    .initialization-alarms {
+        color: red;
+        margin: 1.5rem;
+    }
 }
